--- a/styles/Water/color.css
+++ b/styles/Water/color.css
@@ -245,3 +245,7 @@ p.current-bid:hover, p.refresh:hover { cursor: default !important; }
 .wpa-tables td img { background: #A4CEF0; display: block; margin: auto; padding: 5px; }
 .wpa-tables td a { background: #A4CEF0; border: 1px solid #6ba8e6; color: #0066ff; font-weight: bold; padding: 2px 8px; -moz-border-radius: 3px; -webkit-border-radius: 3px; }
 .wpa-tables td a:hover { color: #0033cc; }
+
+/* Theme Specific */
+form#auction_form, form#auction_form div, #wp-container-p p  { margin: 0; }
+#wp-container-p th, #wp-container-p td, #wp-container-p table { border: 0; }
