--- a/styles/Wind/color.css
+++ b/styles/Wind/color.css
@@ -7,8 +7,28 @@ Get more styles at http://www.wpauctions.com/styles
 Last Update: June 16th, 2010
 */
 
-/* Container */
+	#TB_window *,
+	#TB_window *:before,
+	#TB_window *:after {
+	-webkit-box-sizing: initial;
+	-moz-box-sizing: initial;
+	box-sizing: initial;
+	line-height: inherit; }
 
+	#TB_window,
+	#TB_window #wpa-description-p,
+	#TB_window p,
+	#TB_window button,
+	#TB_window input,
+	#TB_window select,
+	#TB_window textarea { font-size: 12px !important; line-height: initial; }
+
+	#TB_window table { table-layout: auto; }
+	
+	.auctionimages a.thickbox { border: 0; }
+
+/* Container */
+.clearfix:after { content: " "; clear: both; display: table; }
 #wp-container {	font: normal 11px Verdana, Arial, Helvetica, sans-serif; color: #000; }
 
 /* Main Body */
@@ -50,7 +70,7 @@ Last Update: June 16th, 2010
 
 /* Bids Container */
 
-#wp-bidcontainer { padding: 10px 7px 10px 0; height: 31px; background: #DDF4FF; border: 1px solid #6ba8e6; }
+#wp-bidcontainer { padding: 10px 7px 10px 0; background: #DDF4FF; border: 1px solid #6ba8e6; }
 #wp-bidcontainerleft { float:left; width: 47%; text-align:center; color: #000; font-size: 11px;	padding: 2px 0 0 2px; }
 #wp-bidcontainerright { float:right; width: 45%; text-align:center; margin-right: 5px; font-size: 13px; }
 #wp-bidcontainerright a { color: #000 !important; text-decoration: none !important; }
@@ -125,7 +145,7 @@ a.wpa-bin-price { background: #fff; border: 1px solid #6ba8e6; }
 #wp-bottom-p h3 { background: #DDF4FF; color: #003366; }
 #wp-bottom-p h3 p { color: #eee; }
 #wp-bottom-p table { border-top: 1px solid #6ba8e6; }
-#wp-bottom-p table td { text-shadow: none; }
+#wp-bottom-p table td { text-shadow: none; padding: 8px 10px 9px !important; }
 #wp-bottom-p table td p { }
 #wp-bottom-p input { border: 1px solid #6ba8e6; }
 #wp-bottom-p input:focus { border-color: #003366; background: #fefdd9; }
@@ -199,7 +219,7 @@ ul#wp-othercontainer-p li:hover { background: #f9f9f9; }
 /* Images */
 	
 .auctionimages { padding: 5px !important; margin-bottom: 5px !important; text-align: center !important; }
-.auctionimages img { background: #fff !important; border: 1px solid #6ba8e6 !important; display: inline !important; margin: 0 10px !important; padding: 0.059em !important; }
+.auctionimages img { background: #fff !important; border: 1px solid #6ba8e6 !important; display: inline !important; margin: 0 10px !important; padding: 1px !important; }
 
 /* Description */
 
